# DataEngineering-101

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
Python/: Start.ipynb
Python/Stream_Ingestion/: rides.db  stream.ipynb
Python/stock-trading-app/: README.md  main.py  script.py  tickers.csv  transform.ipynb
Python/stock-trading-app/src/: polygon.py
SQL/: docker-compose.yaml  generate_table.sql  generate_table2.sql  sql_101.sql
