[project]
name = "dataengineering-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "openai>=1.108.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "pyspark>=4.0.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "spark>=0.2.1",
    "pylint>=3.3.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
